Fixed work in IE11 toolbar menus are almost not visible on IE11 #458 Issue: https://github.com/xdan/jodit/issues/458

--- a/src/core/ui/button/button/button.less
+++ b/src/core/ui/button/button/button.less
@@ -69,7 +69,7 @@
 			.font();
 
 			display: inline-flex;
-			flex: 1;
+			flex-grow: 1; // ? TODO Need screenshot testing
 			justify-content: center;
 		}
 	}
@@ -98,7 +98,7 @@
 	}
 }
 
-.jodit-ui-button_clear {
+.jodit-ui-button-clear {
 	position: relative;
 	box-sizing: border-box;
 	padding: 0;
@@ -112,6 +112,10 @@
 	text-decoration: none;
 	text-transform: none;
 	user-select: none;
+}
+
+.jodit-ui-button_clear {
+	.jodit-ui-button-clear();
 }
 
 .jodit-ui-button-sizes {
@@ -172,7 +176,7 @@
 }
 
 .jodit-ui-button {
-	.jodit-ui-button_clear();
+	.jodit-ui-button-clear();
 
 	.jodit-ui-button-style();
 
